package com.pluralsight.model;

public interface Priceable {
    double getPrice();  // This method should return the price of the item.
}