package com.pluralsight.model;

public enum RegularToppingType {
    LETTUCE,
    PEPPERS,
    ONIONS,
    TOMATOES,
    JALEPENOS,
    CUCUMBERS,
    PICKLES,
    GUACAMOLE,
    MUSHROOMS,
    MAYO,
    MUSTARD,
    KETCHUP,
    RANCH,
    THOUSAND_ISLAND,
    VINAIGRETTE,
    AU_JUS,
    SAUCE
}